initial commit, build inline data source using frames