@@ -1718,21 +1718,21 @@
             <properties>
                 <jdk.surefire.argLine>
                     <!-- required for DataSketches Memory on Java 11+ -->
-                    --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
-                    --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
-                    --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
-                    --add-opens=java.base/java.nio=ALL-UNNAMED
-                    --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+<!--                    &#45;&#45;add-exports=java.base/jdk.internal.ref=ALL-UNNAMED-->
+<!--                    &#45;&#45;add-exports=java.base/jdk.internal.misc=ALL-UNNAMED-->
+<!--                    &#45;&#45;add-opens=java.base/jdk.internal.ref=ALL-UNNAMED-->
+<!--                    &#45;&#45;add-opens=java.base/java.nio=ALL-UNNAMED-->
+<!--                    &#45;&#45;add-opens=java.base/sun.nio.ch=ALL-UNNAMED-->
 
                     <!-- required for NativeIO#getfd -->
-                    --add-opens=java.base/java.io=ALL-UNNAMED
+<!--                    &#45;&#45;add-opens=java.base/java.io=ALL-UNNAMED-->
 
                     <!-- required for Guice -->
-                    --add-opens=java.base/java.lang=ALL-UNNAMED
+<!--                    &#45;&#45;add-opens=java.base/java.lang=ALL-UNNAMED-->
 
                     <!-- required for certain EqualsVerifier tests -->
                     <!-- (not required in production) -->
-                    --add-opens=java.base/java.util=ALL-UNNAMED
+<!--                    &#45;&#45;add-opens=java.base/java.util=ALL-UNNAMED-->
                 </jdk.surefire.argLine>
             </properties>
             <build>
